nt-peek.js: prevent word wrap.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5763 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/nt-peek.css
+++ b/content/resources/css/nt-peek.css
@@ -1,9 +1,14 @@
 .ft-nt-peek-left {
-	width: 45%;
+	width: 48%;
 	float: left;
 }
 
 .ft-nt-peek-right {
-	width: 55%;
+	width: 48%;
 	float: right;
+}
+
+.ft-nt-peek td {
+	padding-right: 0; /* save some space */
+	white-space: nowrap;
 }
